--- a/css/sass/helpers/_variables.scss
+++ b/css/sass/helpers/_variables.scss
@@ -1,5 +1,5 @@
 //colors
-$main-color :#726DEE;
+$main-color :#287BFF;
 $alt-color : #3d38d3;
 $bg-color : #F1F5F9;
 $black-color : #333333;
@@ -36,5 +36,6 @@ $halfPaddingBottom : 50px;
 //border
 $main-border-radius : 10px;
 $rad10 : 10px;
+$rad20 : 20px;
 //shadow
 $mainBoxShadow : 0 0 10px #DDD;
