--- a/css/sass/layout/_content.scss
+++ b/css/sass/layout/_content.scss
@@ -1,6 +1,8 @@
 .page .content{
     width: 100%;
     overflow: hidden;
+    position: relative;
+    z-index: 1;
     .content-head{
         background-color: white;
         @include flexBetween();
