--- a/css/sass/layout/_global-rules.scss
+++ b/css/sass/layout/_global-rules.scss
@@ -27,3 +27,35 @@ body{
   input[type="number"] {
     -moz-appearance: textfield;
   }
+  ::-webkit-scrollbar{
+    width: 15px;
+  }
+  ::-webkit-scrollbar-track{
+    background-color: white;
+  }
+  ::-webkit-scrollbar-thumb{
+    background-color: $main-color;
+    &:hover{
+      background-color: $alt-color;
+    }
+  }
+  .main-heading{
+    position: relative;
+    margin: 20px 20px 40px;
+    &::after,
+    &::before{
+      content: "";
+      height: 3px;
+      position: absolute;
+      bottom: -10px;
+      left: 0;
+    }
+    &::before{
+      background-color: white;
+      width: 120px;
+    }
+    &::after{
+      background-color: black;
+      width: 40px;
+    }
+  }
