--- a/css/sass/layout/_sidebar.scss
+++ b/css/sass/layout/_sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar{
     width: 250px;
     min-height: 100vh;
-    background-color: white;
+    background-color: $main-color;
     box-shadow: $mainBoxShadow;
     padding: 20px;
     position: relative;
@@ -21,18 +21,19 @@
             content: "";
             width: 100%;
             height: 2px;
-            background-color: black;
+            background-color: white;
             bottom: -20px;
             position: absolute;
             left: 0;
         }
         .title-icon{
             font-size: 24px;
-            color: $main-color;
+            color: white;
         }
         .title-text{
             text-transform: uppercase;
             font-size: 20px;
+            color: white;
             margin: {
                 left: 5px
             };
@@ -43,22 +44,47 @@
     }
     ul{
         margin-top: 50px;
+        @media($maxMobile){
+            margin-top: 70px;
+        }
         li{
             a{
+                position: relative;
+                width: calc(100% + 25px);
                 display: flex;
                 align-items: center;
                 margin-bottom: 5px;
-                transition: background $mainTransitionDuration;
-                border-radius: 6px;
+                border-top-left-radius: $rad20;
+                border-bottom-left-radius: $rad20;
                 font: {
                     size: 14px
                 };
-                color: black;
-                border-radius: 6px;
+                color: white;
                 padding: 10px;
                 &.active,
                 &:hover{
-                    background-color: #F6F6F6;
+                    background-color: $bg-color;
+                    color: black;
+                    &::before,
+                    &::after{
+                        content: "";
+                        position: absolute;
+                        right: 5px;
+                        @include circle(50px);
+                        background-color: transparent;
+                        opacity: 1;
+                        @media($maxMobile){
+                            right: 10px;
+                        }
+                    }
+                    &::before{
+                        top: -50px;
+                        @include prefixer(box-shadow,35px 35px 0 10px $bg-color);
+                    }
+                    &::after{
+                        bottom: -50px;
+                        @include prefixer(box-shadow,35px -35px 0 10px $bg-color);
+                    }
                 }
                 span{
                     font-size: 14px;
@@ -66,9 +92,6 @@
                     @media($maxMobile){
                         display: none;
                     }
-                }
-                @media($maxMobile){
-                    justify-content: center;
                 }
             }
         }
