make welcome and quick draft widgets

--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -12,5 +12,7 @@
 @import "sass/layout/sidebar";
 // import content
 @import "sass/layout/content";
+// import dashboard
+@import "sass/layout/dashboard";
 // import buttons
 @import "sass/components/buttons";
