--- a/css/sass/helpers/_variables.scss
+++ b/css/sass/helpers/_variables.scss
@@ -4,8 +4,9 @@ $alt-color : #3d38d3;
 $bg-color : #F1F5F9;
 $black-color : #333333;
 $light-gray-color : #D3D3D3;
-$gray-color : #888;
+$gray-color : #A89CA0;
 $gray-alt-color : #ccc;
+$gray-third-color : #EEEEEE;
 $button-gray-color : #6C757D;
 $overlay-color :rgba(0, 0, 0, 0.5);
 $blue-color : #0075ff;
@@ -37,5 +38,6 @@ $halfPaddingBottom : 50px;
 $main-border-radius : 10px;
 $rad10 : 10px;
 $rad20 : 20px;
+$rad6 : 6px;
 //shadow
 $mainBoxShadow : 0 0 10px #DDD;
