--- a/css/homepage.css
+++ b/css/homepage.css
@@ -69,6 +69,25 @@ input[type=number] {
   width: 40px;
 }
 
+.main-link {
+  background-color: #287BFF;
+  color: white;
+  padding: 4px;
+  border-radius: 6px;
+  font-weight: 700;
+  font-size: 14px;
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 15px 15px auto;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.main-link:hover {
+  background-color: #3d38d3;
+}
+
 .container {
   margin: auto;
   padding-left: 15px;
@@ -228,7 +247,7 @@ input[type=number] {
   top: 50%;
   transform: translateY(-50%);
   left: 15px;
-  color: #888;
+  color: #A89CA0;
 }
 .page .content .content-head .search input {
   width: 170px;
@@ -248,7 +267,7 @@ input[type=number] {
   font-size: 14px;
 }
 .page .content .content-head .search input:focus {
-  outline: 1px solid #888;
+  outline: 1px solid #A89CA0;
   width: 200px;
 }
 .page .content .content-head .search input:focus::-moz-placeholder {
@@ -285,4 +304,135 @@ input[type=number] {
   cursor: pointer;
   margin: 0px;
   margin-left: 15px;
+}
+.page .content .wrapper {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  margin-left: 20px;
+  margin-right: 20px;
+}
+@media (max-width:767px) {
+  .page .content .wrapper {
+    grid-template-columns: minmax(200px, 1fr);
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
+.page .content .wrapper .welcome {
+  overflow: hidden;
+  background-color: white;
+  border-radius: 10px;
+}
+@media (max-width:767px) {
+  .page .content .wrapper .welcome {
+    text-align: center;
+    display: block;
+  }
+}
+.page .content .wrapper .welcome .intro {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #287BFF;
+}
+@media (max-width:767px) {
+  .page .content .wrapper .welcome .intro {
+    padding-bottom: 30px;
+  }
+}
+.page .content .wrapper .welcome .intro .intro-text h2 {
+  color: white;
+  font-weight: 700;
+}
+.page .content .wrapper .welcome .intro .intro-text p {
+  color: black;
+  font-weight: 600;
+  margin-top: 10px;
+}
+.page .content .wrapper .welcome .intro img {
+  height: 100px;
+  margin-bottom: -10px;
+}
+@media (max-width:767px) {
+  .page .content .wrapper .welcome .intro img {
+    display: none;
+  }
+}
+.page .content .wrapper .welcome .avatar {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  margin-top: -32px;
+  margin-left: 20px;
+  padding: 2px;
+  background-color: white;
+  --webkit--box-shadow: 0 0 5px #D3D3D3;
+  --moz--box-shadow: 0 0 5px #D3D3D3;
+  --o--box-shadow: 0 0 5px #D3D3D3;
+  --ms--box-shadow: 0 0 5px #D3D3D3;
+  box-shadow: 0 0 5px #D3D3D3;
+}
+@media (max-width:767px) {
+  .page .content .wrapper .welcome .avatar {
+    margin-left: 0;
+  }
+}
+.page .content .wrapper .welcome .welcome-body {
+  text-align: center;
+  display: flex;
+  padding: 20px;
+  border-top: 1px solid #EEEEEE;
+  border-bottom: 1px solid #EEEEEE;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+@media (max-width:767px) {
+  .page .content .wrapper .welcome .welcome-body {
+    display: block;
+  }
+}
+.page .content .wrapper .welcome .welcome-body > div {
+  flex: 1;
+}
+.page .content .wrapper .welcome .welcome-body > div span {
+  display: block;
+  color: #A89CA0;
+  font-size: 14px;
+  margin-top: 10px;
+}
+@media (max-width:767px) {
+  .page .content .wrapper .welcome .welcome-body > div span {
+    margin-top: 5px;
+  }
+}
+@media (max-width:767px) {
+  .page .content .wrapper .welcome .welcome-body > div:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+.page .content .wrapper .quick-draft {
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+.page .content .wrapper .quick-draft h2 {
+  margin-bottom: 10px;
+}
+.page .content .wrapper .quick-draft p {
+  color: #A89CA0;
+  margin-bottom: 20px;
+  font-size: 15px;
+}
+.page .content .wrapper .quick-draft form input[type=text], .page .content .wrapper .quick-draft form textarea {
+  display: block;
+  width: 100%;
+  background-color: #EEEEEE;
+  border-radius: 6px;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+.page .content .wrapper .quick-draft form textarea {
+  resize: none;
+  min-height: 180px;
 }/*# sourceMappingURL=homepage.css.map */
