--- a/css/sass/layout/_content.scss
+++ b/css/sass/layout/_content.scss
@@ -186,5 +186,89 @@
                 }
             }
         }
+        .yearly-target{
+            padding: 20px;
+            background-color: white;
+            border-radius: $rad10;
+            h2{
+                margin-bottom: 10px;
+            }
+            p{
+                color: $gray-color;
+                margin-bottom: 20px;
+                font-size: 15px;
+            }
+            .target-row{
+                margin-bottom: 20px;
+                display: flex;
+                align-items: center;
+                .icon{
+                    width: 80px;
+                    height: 80px;
+                    @include flexCenterer();
+                }
+                .details{
+                    margin-left: 15px;
+                    .title{
+                        color: $gray-color;
+                        font-size: 14px;
+                    }
+                    .number{
+                        display: block;
+                        margin: {
+                            top: 5px;
+                            right:0 ;
+                            bottom: 10px;
+                            left:0 ;
+                        };
+                        font-weight: 700;
+                    }
+                    .progress{
+                        position: relative;
+                        & > span{
+
+                            span{
+                                &::after{
+                                    content: "";
+                                }
+                            }
+                        }
+                    }
+                }
+                &.money{
+                    .icon{
+                        background-color: rgba($color: $blue-color, $alpha: 0.2);
+                        i{
+                            color: $blue-color;
+                        }
+                    }
+                    .progress{
+                        background-color: $blue-color;
+                    }
+                }
+                &.projects{
+                    .icon{
+                        background-color: rgba($color: $orange-color, $alpha: 0.2);
+                        i{
+                            color: $orange-color;
+                        }
+                    }
+                    .progress{
+                        background-color: $orange-color;
+                    }
+                }
+                &.team{
+                    .icon{
+                        background-color: rgba($color: $green-color, $alpha: 0.2);
+                        i{
+                            color: $green-color;
+                        }
+                    }
+                    .progress{
+                        background-color: $green-color;
+                    }
+                }
+            }
+        }
     }
 }
