--- a/css/sass/layout/_content.scss
+++ b/css/sass/layout/_content.scss
@@ -199,41 +199,57 @@
                 font-size: 15px;
             }
             .target-row{
-                margin-bottom: 20px;
+                margin-bottom: 15px;
                 display: flex;
                 align-items: center;
                 .icon{
                     width: 80px;
                     height: 80px;
                     @include flexCenterer();
+                    background-color: red;
+                    margin-right: 15px;
                 }
                 .details{
-                    margin-left: 15px;
+                    flex: 1;
                     .title{
                         color: $gray-color;
-                        font-size: 14px;
+                        font-size: 15px;
                     }
                     .number{
                         display: block;
-                        margin: {
-                            top: 5px;
-                            right:0 ;
-                            bottom: 10px;
-                            left:0 ;
-                        };
+                        margin: 10px 0px 10px;
                         font-weight: 700;
                     }
                     .progress{
                         position: relative;
+                        background-color: rgba($color: $green-color, $alpha: 0.2);
                         & > span{
-
+                            background-color: red;
+                            display: block;
+                            position: relative;
+                            height: 4px;
                             span{
+                                position: absolute;
+                                right: -16px;
+                                bottom: 16px;
+                                background-color: red;
+                                padding: 2px 5px;
+                                border-radius: $rad6;
+                                color: white;
+                                font-weight: 700;
+                                font-size: 13px;
                                 &::after{
                                     content: "";
+                                    border-color: transparent;
+                                    border-width: 5px;
+                                    border-style: solid;
+                                    @include horizantalCenterer();
+                                    bottom: -10px;
                                 }
                             }
                         }
                     }
+                    
                 }
                 &.money{
                     .icon{
@@ -243,7 +259,16 @@
                         }
                     }
                     .progress{
-                        background-color: $blue-color;
+                        background-color: rgba($color: $blue-color, $alpha: 0.2);
+                        & > span{
+                            background-color: $blue-color;
+                            span{
+                                background-color: $blue-color;
+                                &::after{
+                                    border-top-color:$blue-color ;
+                                }
+                            }
+                        }
                     }
                 }
                 &.projects{
@@ -254,7 +279,16 @@
                         }
                     }
                     .progress{
-                        background-color: $orange-color;
+                        background-color: rgba($color: $orange-color, $alpha: 0.2);
+                        & > span{
+                            background-color: $orange-color;
+                            span{
+                                background-color: $orange-color;
+                                &::after{
+                                    border-top-color:$orange-color ;
+                                }
+                            }
+                        }
                     }
                 }
                 &.team{
@@ -265,10 +299,91 @@
                         }
                     }
                     .progress{
-                        background-color: $green-color;
+                        background-color: rgba($color: $green-color, $alpha: 0.2);
+                        & > span{
+                            background-color: $green-color;
+                            span{
+                                background-color: $green-color;
+                                &::after{
+                                    border-top-color:$green-color ;
+                                }
+                            }
+                        }
                     }
                 }
             }
+            // .target-row{
+            //     margin-bottom: 20px;
+            //     display: flex;
+            //     align-items: center;
+            //     .icon{
+            //         width: 80px;
+            //         height: 80px;
+            //         @include flexCenterer();
+            //     }
+            //     .details{
+            //         margin-left: 15px;
+            //         flex: 1;
+            //         .title{
+            //             color: $gray-color;
+            //             font-size: 14px;
+            //         }
+            //         .number{
+            //             display: block;
+            //             margin: {
+            //                 top: 5px;
+            //                 right:0 ;
+            //                 bottom: 10px;
+            //                 left:0 ;
+            //             };
+            //             font-weight: 700;
+            //         }
+            //         .progress{
+            //             position: relative;
+            //             & > span{
+                            
+            //                 span{
+            //                     &::after{
+            //                         content: "";
+            //                     }
+            //                 }
+            //             }
+            //         }
+            //     }
+                // &.money{
+                //     .icon{
+                //         background-color: rgba($color: $blue-color, $alpha: 0.2);
+                //         i{
+                //             color: $blue-color;
+                //         }
+                //     }
+                //     .progress{
+                //         background-color: rgba($color: $blue-color, $alpha: 0.2)
+                //     }
+                // }
+                // &.projects{
+                //     .icon{
+                //         background-color: rgba($color: $orange-color, $alpha: 0.2);
+                //         i{
+                //             color: $orange-color;
+                //         }
+                //     }
+                //     .progress{
+                //         background-color: rgba($color: $orange-color, $alpha: 0.2);
+                //     }
+                // }
+                // &.team{
+                //     .icon{
+                //         background-color: rgba($color: $green-color, $alpha: 0.2);
+                //         i{
+                //             color: $green-color;
+                //         }
+                //     }
+                //     .progress{
+                //         background-color: rgba($color: $green-color, $alpha: 0.2);
+                //     }
+                // }
+            // }
         }
     }
 }
