--- a/css/sass/layout/_content.scss
+++ b/css/sass/layout/_content.scss
@@ -75,6 +75,64 @@
                     right: 10px
                 };
         }
+        .news{
+                grid-column-start: 1;
+                grid-column-end: -1;
+            background-color: white;
+            padding: 20px;
+            position: relative;
+            border-radius: $rad10;
+            display: flex;
+            justify-content: space-between;
+            .massage{
+                h3{
+                    color: rgba($color: $main-color, $alpha: 0.7);
+                    font-size:22px;
+                    width: 50%;
+                }
+                p{
+                    margin: 20px 0px;
+                    color: $gray-color;
+                    font-weight: 700;
+                    font-size: 18px;
+                    line-height: 25px;
+                }
+                .links{
+                    @include contentVericalCenterer();
+                    @media ($maxMobile) {
+                        justify-content: space-between;
+                    }
+                    .main-link{
+                        margin: 0px;
+                        padding: 10px;
+                    }
+                    span{
+                        margin-left: 15px;
+                        color: $blue-color;
+                        text-decoration: underline;
+                        position: relative;
+                        cursor: pointer;
+                        &::after{
+                        font-family: var(--fa-style-family-classic);
+                        content: "\f105";
+                        font-weight: 900;
+                        @include verticalCenterer();
+                        right: -15px;
+                        @media ($maxMobile) {
+                            display: none;
+                        }
+                        }
+                    }
+                }
+            }
+            img{
+                width: 200px;
+                display: block;
+                @media($maxMobile){
+                    display: none;
+                }
+            }
+        }
         .welcome{
             overflow: hidden;
             background-color: white;
