--- a/css/sass/layout/_content.scss
+++ b/css/sass/layout/_content.scss
@@ -76,14 +76,15 @@
                 };
         }
         .news{
-                grid-column-start: 1;
-                grid-column-end: -1;
+            grid-column-start: 1;
+            grid-column-end: -1;
             background-color: white;
             padding: 20px;
             position: relative;
             border-radius: $rad10;
             display: flex;
             justify-content: space-between;
+            align-items: center;
             .massage{
                 h3{
                     color: rgba($color: $main-color, $alpha: 0.7);
@@ -125,11 +126,15 @@
                     }
                 }
             }
-            img{
-                width: 200px;
-                display: block;
-                @media($maxMobile){
-                    display: none;
+            .image{
+                flex: 1;
+                display: flex;
+                justify-content: center;
+                img{
+                    width: 150px;
+                    @media($maxMobile){
+                        display: none;
+                    }
                 }
             }
         }
@@ -370,78 +375,107 @@
                     }
                 }
             }
-            // .target-row{
-            //     margin-bottom: 20px;
-            //     display: flex;
-            //     align-items: center;
-            //     .icon{
-            //         width: 80px;
-            //         height: 80px;
-            //         @include flexCenterer();
-            //     }
-            //     .details{
-            //         margin-left: 15px;
-            //         flex: 1;
-            //         .title{
-            //             color: $gray-color;
-            //             font-size: 14px;
-            //         }
-            //         .number{
-            //             display: block;
-            //             margin: {
-            //                 top: 5px;
-            //                 right:0 ;
-            //                 bottom: 10px;
-            //                 left:0 ;
-            //             };
-            //             font-weight: 700;
-            //         }
-            //         .progress{
-            //             position: relative;
-            //             & > span{
-                            
-            //                 span{
-            //                     &::after{
-            //                         content: "";
-            //                     }
-            //                 }
-            //             }
-            //         }
-            //     }
-                // &.money{
-                //     .icon{
-                //         background-color: rgba($color: $blue-color, $alpha: 0.2);
-                //         i{
-                //             color: $blue-color;
-                //         }
-                //     }
-                //     .progress{
-                //         background-color: rgba($color: $blue-color, $alpha: 0.2)
-                //     }
-                // }
-                // &.projects{
-                //     .icon{
-                //         background-color: rgba($color: $orange-color, $alpha: 0.2);
-                //         i{
-                //             color: $orange-color;
-                //         }
-                //     }
-                //     .progress{
-                //         background-color: rgba($color: $orange-color, $alpha: 0.2);
-                //     }
-                // }
-                // &.team{
-                //     .icon{
-                //         background-color: rgba($color: $green-color, $alpha: 0.2);
-                //         i{
-                //             color: $green-color;
-                //         }
-                //     }
-                //     .progress{
-                //         background-color: rgba($color: $green-color, $alpha: 0.2);
-                //     }
-                // }
-            // }
+            
+        }
+        .statistics{
+            grid-column-start: 1;
+            grid-column-end: -1;
+            padding: 10px;
+            display: grid;
+            grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+            gap: 20px;
+            justify-content: space-between;
+            .box{
+                padding: 30px 10px;
+                background-color: white;
+                border-radius: $rad10;
+                @include flexCenterer();
+                .icon{
+                    margin-right: 10px;
+                    width: 70px;
+                    height: 70px;
+                    @include flexCenterer();
+                    border-radius: $rad6;
+                    i{
+                        font-size: 30px;
+                    }
+                }
+                .text{
+                    span{
+                        display: block;
+                    }
+                    .title{
+                        font-weight: 700;
+                        color: $black-color;
+                    }
+                    .number{
+                        font-weight: 500;
+                        margin: 5px 0px; 
+                        font-weight: 700;
+                        color: $black-color;
+                    }
+                    .date{
+                        color: $gray-color;
+                        font-size: 13px;
+                    }
+                    .result{
+                        margin: 5px 0px 0px;
+                        @include contentVericalCenterer();
+                        font-size: 13px;
+                        color: $gray-color;
+                        span{
+                            font-size: 12px;
+                            margin-right: 5px;
+                            color: $green-color;
+                            &::before{
+                                font-family: var(--fa-style-family-classic);
+                                content: "\f102";
+                                font-weight: 700;
+                            }
+                        }
+                    }
+                }
+                &.Earnings{
+                    .text{
+                        
+                        .number{
+                            color: $red-color;
+                        }
+                    }
+                }
+            }
+        }
+        .students{
+            .icon{
+                background-color: rgba($color: $blue-color, $alpha: 0.2);
+                i{
+                    color: $blue-color;
+                }
+            }
+        }
+        .courses{
+            .icon{
+                background-color: rgba($color: $orange-color, $alpha: 0.2);
+                i{
+                    color: $orange-color;
+                }
+            }
+        }
+        .revenue{
+            .icon{
+                background-color: rgba($color: $green-color, $alpha: 0.2);
+                i{
+                    color: $green-color;
+                }
+            }
+        }
+        .Earnings{
+            .icon{
+                background-color: rgba($color: $red-color, $alpha: 0.2);
+                i{
+                    color: $red-color;
+                }
+            }
         }
     }
 }
